--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "pthread.h": "c",
         "unistd.h": "c",
         "stdbool.h": "c",
-        "wait.h": "c"
+        "wait.h": "c",
+        "signal.h": "c"
     }
 }
